package com.medical.dto;

import com.medical.enums.UserRole;

import jakarta.validation.constraints.NotBlank;
import jakarta.validation.constraints.NotNull;
import jakarta.validation.constraints.Size;
import lombok.*;

/**
 * Request DTO for creating a new user.
 * @author Henry Fernando Mulato Llanten <henrymulato@unicauca.edu.co>
 */
@Data
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class CreateUserRequest {

  @NotBlank(message = "Username is required")
  @Size(min = 4, max = 50, message = "Username must be between 4 and 50 characters")
  private String username;

  @NotBlank(message = "Password is required")
  @Size(min = 8, message = "Password must be at least 8 characters")
  private String password;

  @NotBlank(message = "Email is required")
  private String email;

  @NotNull(message = "Role is required")
  private UserRole role;

  // Patient specific fields (required when role = PATIENT)
  private String firstName;
  private String lastName;
  private String documentType;
  private String documentNumber;
  private String phone;
  private String address;
  private String eps;

  // Professional specific fields (required when role = PROFESSIONAL)
  private String specialty;
  private String licenseNumber;
}