package com.medical.enums;

/**
 * User roles in the system.
 */
public enum UserRole {
  ADMIN,
  SCHEDULER,
  PATIENT,
  PROFESSIONAL
}